<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#293241"
    tools:context=".Item">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9384405" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <ImageView
        android:id="@+id/image_anime_item"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/imagen"
        android:cropToPadding="true"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/guideline15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline23"
        app:srcCompat="@drawable/kimetsu_no_yaiba" />

    <TextView
        android:id="@+id/text_name_anime_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/kimetsu_no_yaiba"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline25"
        app:layout_constraintTop_toTopOf="@+id/guideline23" />

    <TextView
        android:id="@+id/text_date_anime_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/_25_09_2022"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/guideline25"
        app:layout_constraintTop_toBottomOf="@+id/image_anime_item" />

    <TextView
        android:id="@+id/text_category_anime_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/style_border_editext"
        android:text="@string/shonen"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/text_date_anime_item"
        app:layout_constraintTop_toBottomOf="@+id/image_anime_item" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar2"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:backgroundTint="#333D5A80"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="BottomAppBar" />

    <ImageView
        android:id="@+id/image_edit_item"
        android:layout_width="62dp"
        android:layout_height="0dp"
        android:layout_marginStart="90dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/imagen"
        android:cropToPadding="false"
        app:tint="@color/secundario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/bottomAppBar2"
        app:layout_constraintTop_toTopOf="@+id/bottomAppBar2"
        app:srcCompat="@drawable/ic_baseline_edit_24"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageDeleteItem"
        android:layout_width="62dp"
        android:layout_height="0dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/imagen"
        android:cropToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_edit_item"
        app:layout_constraintTop_toTopOf="@+id/bottomAppBar2"
        app:srcCompat="@drawable/ic_baseline_delete_24"
        app:tint="@color/secundario"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageArrowBack"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline23"
        app:layout_constraintEnd_toStartOf="@+id/guideline25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
        app:tint="@color/secundario" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline26"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="@+id/guideline25"
        app:layout_constraintTop_toBottomOf="@+id/text_category_anime_item">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_description_anime_item"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@drawable/style_border_editext"
                android:text="@string/kimetsu_no_yaiba_tambi_n_conocida_bajo_su_nombre_en_ingl_s_demon_slayer_es_una_serie_de_manga_escrita_e_ilustrada_por_koyoharu_got_ge_cuya_publicaci_n_comenz_el_15_de_febrero_de_2016_en_la_revista_semanal_sh_kan_sh_nen_jump_de_la_editorial_sh_eisha"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                android:scrollbars = "vertical"/>
        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />


</androidx.constraintlayout.widget.ConstraintLayout>

